fix overflow issues in sidebar

--- a/examples/drr/app/[locale]/(user)/analytics/components/RadioButton.scss
+++ b/examples/drr/app/[locale]/(user)/analytics/components/RadioButton.scss
@@ -27,7 +27,11 @@ $md-radio-checked-size: 10px;
         margin-bottom: 0;
         cursor: pointer;
         vertical-align: bottom;
-
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 300px;
+        
         &:before, &:after {
             position: absolute;            
             content: '';  
